# force-training-rate-network

./: CHANGELOG.md  README.md  pyproject.toml
docs/: index.md
src/: __init__.py
src/force_training_rate_network/: __init__.py  cli.py  internal_weight_update_functions.py  lyapunov.py  models.py  simulation.py  training.py  utils.py
src/sample_traget_signal/: target.npy
tests/: test_lyapunov.py  test_models.py  test_simulation.py  test_training.py
